10-toqqer-dev-stb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stb
  namespace: toqqer-test
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: stb
  template:
    metadata:
      labels:
        app: stb
    spec:
      serviceAccountName: cms-sa
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: toqqer-test-pvc
      hostNetwork: true
      imagePullSecrets:
      - name: gcr-key
      containers:
      - name: stb
        image: nkcharan/stbnew:v1
        imagePullPolicy: IfNotPresent
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "java -jar stb-0.0.1-SNAPSHOT.jar" ]
        ports:
        - containerPort: 8022
        volumeMounts:
        - name: persistent-storage
          mountPath: "/data"
        resources:
          requests:
            cpu: 100m
            memory: 400M
          limits:
            cpu: 1200m
            memory: 4000M
        readinessProbe:
          tcpSocket:
            port: 8022
          initialDelaySeconds: 180
          periodSeconds: 30
        livenessProbe:
          tcpSocket:
            port: 8022
          initialDelaySeconds: 180
          periodSeconds: 20
