15-ingress-controller.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ingress-controller
  namespace: toqqer-test
spec:
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: cms-sa
      # Remove hostNetwork: true
      containers:
      - name: ninx-ingress
        image: toqqer/nginx-ingress:v1.10.0
        args:
          - /nginx-ingress-controller
          - --ingress-class=nginx
          - --enable-ssl-passthrough
          - --configmap=$(POD_NAMESPACE)/nginx-ingress-controller
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        securityContext:
          capabilities:
            add:
              - NET_BIND_SERVICE
