jk2-nginx-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: toqqer-test
  labels:
    app: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: cms-sa
      containers:
        - name: nginx-ingress-controller
          image: toqqer/nginx-ingress:v1.10.0
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-ingress-config
            - --publish-service=$(POD_NAMESPACE)/nginx-ingress-controller
            - --election-id=nginx-ingress-leader
            - --ingress-class=nginx
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
            initialDelaySeconds: 10
            periodSeconds: 10
