08-service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-external
  namespace: toqqer-test
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  clusterIP: None
