09-endpoints-redis.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: redis-external
  namespace: toqqer-test
subsets:
  - addresses:
      - ip: 192.168.0.211
    ports:
      - port: 6379
