11-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-external
  namespace: toqqer-test
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-external
  namespace: toqqer-test
subsets:
  - addresses:
      - ip: 192.168.0.200
    ports:
      - port: 3306
