12-serviceforcms.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-service
  namespace: toqqer-test
  labels:
    app: cms
spec:
  selector:
    app: cms
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8013
      name: http
  type: ClusterIP
