13-ingress-service-cms.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-service
  namespace: toqqer-test
spec:
  selector:
    app: cms  # This matches your pod's label
  ports:
    - protocol: TCP
      port: 80        # External port (what other services will use)
      targetPort: 8013  # Your pod's actual port
  type: ClusterIP
