16-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: toqqer-test
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: nginx-ingress
