12-cms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-ingress
  namespace: toqqer-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: cms.local  # You can change this to your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cms-service  # This matches your service name
            port:
              number: 80
