ingressforcms.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-ingress
  namespace: toqqer-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cms.toqqer.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cms-service
            port:
              number: 80
